modal covers entire page now and prevents scrolling

--- a/client/Component/styles/app.css
+++ b/client/Component/styles/app.css
@@ -4,5 +4,6 @@
     height: 100%;
     background-color: white;
     z-index: 10;
-    margin: -10px;
+    top: 0;
+    left: 0;
 }
